--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./assets/images/orange_icon.png" /> 
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Merienda:700|Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/script.js"></script>
     <title>Le Bistro du Coin</title>
@@ -22,6 +23,7 @@
                     Le Bistro du coin.
                 </h1>
             </div>
+            <div class="img"></div>
         </header>
         <nav>
             <ul class="nav">
@@ -42,24 +44,27 @@
                 </li> 
             </ul>
         </nav>
-        <main class="container mainHome">
-            <section class="event card">
-                <div id="concert" class="image">
-                    <!-- <img class="card-img-top" src="./assets/images/concert.jpg" alt="concert image" /> -->
-                </div>
-                <h2 class="event">Ne ratez pas nos évenements</h2>
-                <h3 class="event">Concerts</h3>
-                <p class="event">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </section>
-            <section class="promo card">
-                <div id="happyHour" class="image">
-                    <!-- <img class="card-img-top" src="./assets/images/happyHour.jpg" alt="happy hour image" /> -->
-                </div>
-                <h2 class="event">Les promotions du moment</h2>
-                <h3 class="event">Happy Hours</h3>
-                <p class="event">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </section>
-        </main>
     </div>
+    
+    <main class="container-fluid mainHome">
+        <section>
+            <p id="accueil">blabla</p>
+        </section>
+        <section class="containEvent card">
+            <div id="concert" class="image"></div>
+            <h2 class="event">Ne ratez pas nos évenements</h2>
+            <h3 class="event">Concerts</h3>
+            <p class="event">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </section>
+        <section class="promo card">
+            <div id="happyHour" class="image">
+                <!-- <img class="card-img-top" src="./assets/images/happyHour.jpg" alt="happy hour image" /> -->
+            </div>
+            <h2 class="event">Les promotions du moment</h2>
+            <h3 class="event">Happy Hours</h3>
+            <p class="event">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+    </main>
+
 </body>
 </html>
