--- a/carte.html
+++ b/carte.html
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Merienda:700|Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./assets/images/orange_icon.png" /> 
     <title>La Carte du Bistro du Coin</title>
@@ -22,6 +23,7 @@
                     Le Bistro du coin.
                 </h1>
             </div>
+            <div class="img"></div>
         </header>
         <nav>
                 <ul class="nav">
