--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <main class="container-fluid mainHome">
         <section>
-            <p id="accueil">blabla</p>
+            <p id="accueil">Bonjour <span id="utilisateur">Utilisateur</span> et bien venu sur le site des <i>Bistros du coin</i>.</p>
         </section>
         <section class="containEvent card">
             <div id="concert" class="image"></div>
