--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./assets/images/orange_icon.png" /> 
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Merienda:700|Source+Sans+Pro:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Devonshire|Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/script.js"></script>
     <title>Contactez le Bistro du Coin</title>
@@ -26,24 +26,67 @@
             <div class="img"></div>
         </header>
         <nav>
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="carte.html">La Carte</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallerie.html">Gallerie</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="restaurant.html">Restaurants</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contacts</a>
-                    </li> 
-                </ul>
-            </nav>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="carte.html">La Carte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallerie.html">Gallerie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="restaurant.html">Restaurants</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contacts</a>
+                </li> 
+            </ul>
+        </nav>
     </div>
+    <main class="container-fluid">
+        <section class="petitMotPerso">
+            <p id="accueil">Vous souhaitez nous contacter ?</p>
+        </section>
+        <section id="form">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="firstName">Prénom</label>
+                        <input type="text" class="form-control" id="firstNameForm" placeholder="Votre prénom">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="lastName">Nom</label>
+                        <input type="text" class="form-control" id="lastNameForm" placeholder="Votre nom">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="email">e-mail</label>
+                    <input type="email" class="form-control" id="emailForm" placeholder="email">
+                </div>
+                <div class="form-group">
+                    <label for="phoneNumbre">N° de téléphone</label>
+                    <input type="tel" class="form-control" id="phoneForm" placeholder="N° de téléphone">
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label class="mr-sm-2" for="reason">Quelle est la raison de votre message ?</label>
+                        <select class="custom-select mr-sm-2" id="menuReason">
+                            <!-- <option selected>Choose...</option> -->
+                            <option value="Réservation">Je veux réserver</option>
+                            <option value="Question">J'ai une question</option>
+                            <option value="Job">Je cherche un job</option>
+                            <option value="Plainte">Je ne suis pas content(e)</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <textarea type="text" class="form-control" id="textForm" placeholder="Example input">Expliquez nous tout cela.</textarea>
+                </div>
+            </form>
+        </section>
+    </main>
+    
 </body>
 </html>
