--- a/gallerie.html
+++ b/gallerie.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./assets/images/orange_icon.png" /> 
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Merienda:700|Source+Sans+Pro:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Devonshire|Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/script.js"></script>
     <title>La Gallerie du Bistro du Coin</title>
@@ -26,24 +26,29 @@
             <div class="img"></div>
         </header>
         <nav>
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="carte.html">La Carte</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallerie.html">Gallerie</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="restaurant.html">Restaurants</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contacts</a>
-                    </li> 
-                </ul>
-            </nav>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="carte.html">La Carte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallerie.html">Gallerie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="restaurant.html">Restaurants</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contacts</a>
+                </li> 
+            </ul>
+        </nav>
     </div>
+    <main class="container-fluid">
+        <section class="petitMotPerso">
+            <p id="accueil"><span id="utilisateur">Utilisateur</span>, voilà à quoi ressemblent les <i>Bistros du coin</i>.</p>
+        </section>
+    </main>
 </body>
 </html>
