--- a/restaurant.html
+++ b/restaurant.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./assets/images/orange_icon.png" /> 
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Merienda:700|Source+Sans+Pro:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Devonshire|Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/script.js"></script>
     <title>Les différents Bistro du Coin</title>
@@ -26,24 +26,104 @@
             <div class="img"></div>
         </header>
         <nav>
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="carte.html">La Carte</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallerie.html">Gallerie</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="restaurant.html">Restaurants</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contacts</a>
-                    </li> 
-                </ul>
-            </nav>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="carte.html">La Carte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallerie.html">Gallerie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="restaurant.html">Restaurants</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contacts</a>
+                </li> 
+            </ul>
+        </nav>
     </div>
+            
+    <main class="container-fluid mainResto">
+        <section class="petitMotPerso">
+            <p id="accueil"><span id="utilisateur">Utilisateur</span>, tu trouveras ici les différents <i>Bistros du coin</i>.</p>
+        </section>
+    
+        <section class="row resto" >
+            <div class="col-sm-12 col-md-4" id="resto1">
+                <div class="panel panel-default center-block">
+                    <div class="panel-header" id="imgRestoBxl">
+                    </div>
+                    <div class="panel-body">
+                    <h3>Bruxelles</h3>
+                    <p>
+                        188, Rue Antoine Dansaert - 1000 Bruxelles <br /><br />
+                        <b>heures d'ouverture:</b><br />
+                        lundi : fermé<br />
+                        mardi : 11h30 à 23h30<br />
+                        mercredi : 11h30 à 23h30<br />
+                        jeudi : 11h30 à 23h30<br />
+                        vendredi : 11h30 à 2h30<br /> 
+                        samedi : 11h30 à 2h30<br /> 
+                        dimance : 11h30 à 23h30<br /> 
+                    </p>
+                    </div>
+                    <div class="panel-footer" id="mapBruxelles">
+                        <!-- <iframe src="https://www.google.be/maps/place/Rue+Antoine+Dansaert+188,+1000+Bruxelles/@50.8527606,4.3397202,17z/data=!3m1!4b1!4m5!3m4!1s0x47c3c389465acf87:0xc4562b9c159da335!8m2!3d50.8527572!4d4.3419089"></iframe> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-4" #="resto1">
+                <div class="panel panel-default center-block">
+                    <div class="panel-header" id="imgRestoParis">
+                    </div>
+                    <div class="panel-body">
+                    <h3>Paris</h3>
+                    <p>
+                        1, rue de Bruxelles - 75009 Paris <br /><br />
+                        <b>heures d'ouverture:</b><br />
+                        lundi : fermé<br />
+                        mardi : 11h30 à 23h30<br />
+                        mercredi : 11h30 à 23h30<br />
+                        jeudi : 11h30 à 23h30<br />
+                        vendredi : 11h30 à 2h30<br /> 
+                        samedi : 11h30 à 2h30<br /> 
+                        dimance : 11h30 à 23h30<br /> 
+                    </p>
+                    </div>
+                    <div class="panel-footer" id="mapParis">
+                        <!-- <iframe src="https://www.google.be/maps/place/Rue+de+Bruxelles,+75009+Paris,+France/@48.8832608,2.3305656,16.98z/data=!4m5!3m4!1s0x47e66e4e9e93c6e1:0x3db5bcd75e6c77ff!8m2!3d48.8832775!4d2.3305504"></iframe> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-4" #="resto1">
+                <div class="panel panel-default center-block">
+                    <div class="panel-header" id="imgRestoTokyo">
+                    </div>
+                    <div class="panel-body">
+                    <h3>Tokyo</h3>
+                    <p>
+                        2-20-16, Yoyogi, Shibuya, Tokyo 151-0053<br /><br />
+                        <b>heures d'ouverture:</b><br />
+                        lundi : fermé<br />
+                        mardi : 11h30 à 23h30<br />
+                        mercredi : 11h30 à 23h30<br />
+                        jeudi : 11h30 à 23h30<br />
+                        vendredi : 11h30 à 2h30<br /> 
+                        samedi : 11h30 à 2h30<br /> 
+                        dimance : 11h30 à 23h30<br /> 
+                    </p>
+                    </div>
+                    <div class="panel-footer" id="mapTokyo">
+                        <!-- <iframe src="https://www.google.be/maps/place/2+Chome-20-16+Yoyogi,+Shibuya-ku,+T%C5%8Dky%C5%8D-to+151-0053,+Japan/@35.6862988,139.6975269,17z/data=!4m5!3m4!1s0x60188cd1ee55cc99:0xa3e629f6e7d38ff0!8m2!3d35.6865297!4d139.6970226"></iframe> -->
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
