--- a/carte.html
+++ b/carte.html
@@ -47,8 +47,181 @@
     </div>
     <main class="container-fluid">
         <section class="petitMotPerso">
-            <p id="accueil"><span id="utilisateur">Utilisateur</span>, tu peux directement passer commande sur le site des <i>Bistros du coin</i>.</p>
+            <p>La carte du <i>Bistro du coin</i>.</p>
         </section>
+        <section>
+            <div class="row">
+                <ul class="list-group col-ms-11 col-md-5">
+                    <li class="list-group-item titre"><b>Les Entrées</b></li>
+                    <li class="list-group-item">Dapibus ac facilisis in
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Morbi leo risus
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Porta ac consectetur ac
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Vestibulum at eros
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                </ul>
+                <ul class="list-group col-ms-11 col-md-5">
+                    <li class="list-group-item titre"><b>Les Salades</b></li>
+                    <li class="list-group-item">Dapibus ac facilisis in
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Morbi leo risus
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Porta ac consectetur ac
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Vestibulum at eros
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                </ul>
+                <ul class="list-group col-ms-11 col-md-5">
+                    <li class="list-group-item titre"><b>Les Burgers</b></li>
+                    <li class="list-group-item">Dapibus ac facilisis in
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Morbi leo risus
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Porta ac consectetur ac
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Vestibulum at eros
+                        <span class="badge badge-secondary">&#8364</span>    
+                    </li>
+                </ul>
+                <ul class="list-group col-ms-11 col-md-5">
+                    <li class="list-group-item titre"><b>Les Plats</b></li>
+                    <li class="list-group-item">Dapibus ac facilisis in
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Morbi leo risus
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Porta ac consectetur ac
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Vestibulum at eros
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                </ul>
+                <ul class="list-group col-ms-11 col-md-5">
+                    <li class="list-group-item titre"><b>Les desserts</b></li>
+                    <li class="list-group-item">Dapibus ac facilisis in
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Morbi leo risus
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Porta ac consectetur ac
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                    <li class="list-group-item">Vestibulum at eros
+                        <span class="badge badge-secondary">&#8364</span>
+                    </li>
+                </ul>
+                <br />
+                <ul class="list-group col-ms-11 col-md-5">
+                        <li class="list-group-item titre"><b>Les Boissons Fraîches</b></li>
+                        <li class="list-group-item">Dapibus ac facilisis in
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Morbi leo risus
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Porta ac consectetur ac
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Vestibulum at eros
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                    </ul>
+                    <ul class="list-group col-ms-11 col-md-5">
+                        <li class="list-group-item titre"><b>Les Boissons Chaudes</b></li>
+                        <li class="list-group-item">Dapibus ac facilisis in
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Morbi leo risus
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Porta ac consectetur ac
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Vestibulum at eros
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                    </ul>
+                    <ul class="list-group col-ms-11 col-md-5">
+                        <li class="list-group-item titre"><b>Les Cocktails</b></li>
+                        <li class="list-group-item">Dapibus ac facilisis in
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Morbi leo risus
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Porta ac consectetur ac
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Vestibulum at eros
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                    </ul>
+                    <ul class="list-group col-ms-11 col-md-5">
+                        <li class="list-group-item titre"><b>Les Vins</b></li>
+                        <li class="list-group-item">Dapibus ac facilisis in
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Morbi leo risus
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Porta ac consectetur ac
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Vestibulum at eros
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                    </ul>
+                    <ul class="list-group col-ms-11 col-md-5">
+                        <li class="list-group-item titre"><b>Les bières</b></li>
+                        <li class="list-group-item">Dapibus ac facilisis in
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Morbi leo risus
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Porta ac consectetur ac
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Vestibulum at eros
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                    </ul>
+                    <ul class="list-group col-ms-11 col-md-5">
+                        <li class="list-group-item titre"><b>Les Whisky</b></li>
+                        <li class="list-group-item">Dapibus ac facilisis in
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Morbi leo risus
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Porta ac consectetur ac
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                        <li class="list-group-item">Vestibulum at eros
+                            <span class="badge badge-secondary">&#8364</span>
+                        </li>
+                    </ul>
+            </div>
+                
+               
+        </section>
+
     </main>
 </body>
 </html>
