--- a/gallerie.html
+++ b/gallerie.html
@@ -47,8 +47,37 @@
     </div>
     <main class="container-fluid">
         <section class="petitMotPerso">
-            <p id="accueil"><span id="utilisateur">Utilisateur</span>, voilà à quoi ressemblent les <i>Bistros du coin</i>.</p>
+            <p id="accueil">Un petit coup d'oeil ?</p>
         </section>
+        <div class="row photoContainer">
+            <div class="row moyenneRow">
+                <div class="moyenne col-3" id="photo1">
+                    <!-- <img src="./assets/images/photo1.jpg" alt="photo1" /> -->
+                </div>
+                <div class="moyenne col-3" id="photo2"></div>
+                <div class="moyenne col-3" id="photo3"></div>
+                <div class="moyenne col-3" id="photo4"></div>
+            </div>
+            <div class="row petiteRow">
+                <div class="petite col-2" id="photo5"></div>
+                <div class="petite col-2" id="photo6"></div>
+                <div class="petite col-2" id="photo7"></div>
+                <div class="petite col-2" id="photo8"></div>
+                <div class="petite col-2" id="photo9"></div>
+                <div class="petite col-2" id="photo10"></div>
+            </div>
+            <div class="row grandeRow">
+                <div class="grande col-4" id="photo11"></div>
+                <div class="grande col-4" id="photo12"></div>
+                <div class="grande col-4" id="photo13"></div>
+            </div>
+            <div class="row moyenneRow">
+                <div class="moyenne col-3" id="photo14"></div>
+                <div class="moyenne col-3" id="photo15"></div>
+                <div class="moyenne col-3" id="photo16"></div>
+                <div class="moyenne col-3" id="photo17"></div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
