--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                         <img class="img-responsive center-block" src='./assets/images/concert2.jpg' />
                         </div>
                         <div class="panel-footer">
-                        <h3>Ne ratez pas nos Events</h3>
-                        <p><b>Conserts: </b>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                        <h3 class="titre">Ne ratez pas nos Events</h3>
+                        <p><b>Concerts: </b>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                         <img class="img-responsive center-block" src='./assets/images/happyHour.jpg' />
                         </div>
                         <div class="panel-footer">
-                        <h3>Les promotions du moment</h3>
+                        <h3 class="titre">Les promotions du moment</h3>
                         <p><b>Happy Hours: </b>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                         </div>
                     </div>
