--- a/restaurant.html
+++ b/restaurant.html
@@ -48,7 +48,7 @@
             
     <main class="container-fluid mainResto">
         <section class="petitMotPerso">
-            <p id="accueil"><span id="utilisateur">Utilisateur</span>, tu trouveras ici les différents <i>Bistros du coin</i>.</p>
+            Vous cherchez un restaurant ?</p>
         </section>
     
         <section class="row resto" >
@@ -67,7 +67,7 @@
                         jeudi : 11h30 à 23h30<br />
                         vendredi : 11h30 à 2h30<br /> 
                         samedi : 11h30 à 2h30<br /> 
-                        dimance : 11h30 à 23h30<br /> 
+                        dimanche : 11h30 à 23h30<br /> 
                     </p>
                     </div>
                     <div class="panel-footer" id="mapBruxelles">
@@ -91,7 +91,7 @@
                         jeudi : 11h30 à 23h30<br />
                         vendredi : 11h30 à 2h30<br /> 
                         samedi : 11h30 à 2h30<br /> 
-                        dimance : 11h30 à 23h30<br /> 
+                        dimanche : 11h30 à 23h30<br /> 
                     </p>
                     </div>
                     <div class="panel-footer" id="mapParis">
@@ -115,7 +115,7 @@
                         jeudi : 11h30 à 23h30<br />
                         vendredi : 11h30 à 2h30<br /> 
                         samedi : 11h30 à 2h30<br /> 
-                        dimance : 11h30 à 23h30<br /> 
+                        dimanche : 11h30 à 23h30<br /> 
                     </p>
                     </div>
                     <div class="panel-footer" id="mapTokyo">
