--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,6 @@
                     <div class="form-group">
                         <label class="mr-sm-2" for="reason">Quelle est la raison de votre message ?</label>
                         <select class="custom-select mr-sm-2" id="menuReason">
-                            <!-- <option selected>Choose...</option> -->
                             <option value="Réservation">Je veux réserver</option>
                             <option value="Question">J'ai une question</option>
                             <option value="Job">Je cherche un job</option>
@@ -81,9 +80,34 @@
                         </select>
                     </div>
                 </div>
+                <div class="row">
+                    <legend class="col-form-label col-sm-2 pt-0">Quel restaurant voulez-vous contacter ?</legend>
+                    <br />
+                    <div class="col-sm-10">
+                        <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="RadioBruxelles" value="Bruxelles" checked>
+                        <label class="form-check-label" for="RadioBxl">
+                            Bruxelles
+                        </label>
+                        </div>
+                        <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="RadioParis" value="Paris">
+                        <label class="form-check-label" for="RadioParis">
+                            Paris
+                        </label>
+                        </div>
+                        <div class="form-check disabled">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="RadioTokyo" value="Tokyo" disabled>
+                        <label class="form-check-label" for="RadioTokyo">
+                            Tokyo
+                        </label>
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group">
                     <textarea type="text" class="form-control" id="textForm" placeholder="Example input">Expliquez nous tout cela.</textarea>
                 </div>
+                <button type="submit" class="btn btn-lg">Envoyer</button>
             </form>
         </section>
     </main>
