gallerie responsive mais encore margin bizarre

--- a/gallerie.html
+++ b/gallerie.html
@@ -45,37 +45,35 @@
             </ul>
         </nav>
     </div>
-    <main class="container-fluid">
+    <main class="container-fluid" id="mainGallerie">
         <section class="petitMotPerso">
             <p id="accueil">Un petit coup d'oeil ?</p>
         </section>
         <div class="row photoContainer">
             <div class="row moyenneRow">
-                <div class="moyenne col-3" id="photo1">
-                    <!-- <img src="./assets/images/photo1.jpg" alt="photo1" /> -->
-                </div>
-                <div class="moyenne col-3" id="photo2"></div>
-                <div class="moyenne col-3" id="photo3"></div>
-                <div class="moyenne col-3" id="photo4"></div>
+                <div class="moyenne col-xs-6 col-sm-6 col-md-3" id="photo1"></div>
+                <div class="moyenne col-xs-6 col-sm-6 col-md-3" id="photo2"></div>
+                <div class="moyenne col-xs-6 col-sm-6 col-md-3" id="photo3"></div>
+                <div class="moyenne col-xs-6 col-sm-6 col-md-3" id="photo4"></div>
             </div>
             <div class="row petiteRow">
-                <div class="petite col-2" id="photo5"></div>
-                <div class="petite col-2" id="photo6"></div>
-                <div class="petite col-2" id="photo7"></div>
-                <div class="petite col-2" id="photo8"></div>
-                <div class="petite col-2" id="photo9"></div>
-                <div class="petite col-2" id="photo10"></div>
+                <div class="petite col-xs-4 col-sm-4 col-md-2" id="photo5"></div>
+                <div class="petite col-xs-4 col-sm-4 col-md-2" id="photo6"></div>
+                <div class="petite col-xs-4 col-sm-4 col-md-2" id="photo7"></div>
+                <div class="petite col-xs-4 col-sm-4 col-md-2" id="photo8"></div>
+                <div class="petite col-xs-4 col-sm-4 col-md-2" id="photo9"></div>
+                <div class="petite col-xs-4 col-sm-4 col-md-2" id="photo10"></div>
             </div>
             <div class="row grandeRow">
-                <div class="grande col-4" id="photo11"></div>
-                <div class="grande col-4" id="photo12"></div>
-                <div class="grande col-4" id="photo13"></div>
+                <div class="grande col-xs-12 col-sm-12 col-md-4" id="photo11"></div>
+                <div class="grande col-xs-12 col-sm-12 col-md-4" id="photo12"></div>
+                <div class="grande col-xs-12 col-sm-12 col-md-4" id="photo13"></div>
             </div>
             <div class="row moyenneRow">
-                <div class="moyenne col-3" id="photo14"></div>
-                <div class="moyenne col-3" id="photo15"></div>
-                <div class="moyenne col-3" id="photo16"></div>
-                <div class="moyenne col-3" id="photo17"></div>
+                <div class="moyenne col-xs-6 col-sm-6 col-md-3" id="photo14"></div>
+                <div class="moyenne col-xs-6 col-sm-6 col-md-3" id="photo15"></div>
+                <div class="moyenne col-xs-6 col-sm-6 col-md-3" id="photo16"></div>
+                <div class="moyenne col-xs-6 col-sm-6 col-md-3" id="photo17"></div>
             </div>
         </div>
     </main>
