--- a/carte.html
+++ b/carte.html
@@ -8,8 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/js/script.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="./assets/images/orange_icon.png" /> 
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Devonshire|Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/script.js"></script>
@@ -218,10 +218,17 @@
                         </li>
                     </ul>
             </div>
-                
-               
         </section>
-
     </main>
+    <footer>
+        <div class="left">
+            <h3>Rejoins <i>Le Bistro du coin :</i></h3>
+            <div class="icon">
+                <a href="facebook.com"><i class="fab fa-facebook"><p>Facebook</p></i></a>
+                <a href="twitter.com"><i class="fab fa-twitter-square"><p>Twitter</p></i></a>
+            </div>
+        </div>
+        <div class="img"></div>
+    </footer>
 </body>
 </html>
