--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                         </label>
                         </div>
                         <div class="form-check disabled">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="RadioTokyo" value="Tokyo" disabled>
+                        <input class="form-check-input" type="radio" name="gridRadios" id="RadioTokyo" value="Tokyo">
                         <label class="form-check-label" for="RadioTokyo">
                             Tokyo
                         </label>
@@ -105,12 +105,21 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <textarea type="text" class="form-control" id="textForm" placeholder="Example input">Expliquez nous tout cela.</textarea>
+                    <textarea type="text" class="form-control" id="textForm" placeholder="Example input">Expliquez nous tout.</textarea>
                 </div>
-                <button type="submit" class="btn btn-lg">Envoyer</button>
+                <button type="submit" class="btn btn-lg"><span class="glyphicon glyphicon-send"></span>Envoyer</button>
             </form>
         </section>
     </main>
-    
+    <footer>
+        <div class="left">
+            <h3>Rejoins <i>Le Bistro du coin :</i></h3>
+            <div class="icon">
+                <a href="facebook.com"><i class="fab fa-facebook"><p>Facebook</p></i></a>
+                <a href="twitter.com"><i class="fab fa-twitter-square"><p>Twitter</p></i></a>
+            </div>
+        </div>
+        <div class="img"></div>
+    </footer>
 </body>
 </html>
