--- a/restaurant.html
+++ b/restaurant.html
@@ -125,5 +125,15 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="left">
+            <h3>Rejoins <i>Le Bistro du coin :</i></h3>
+            <div class="icon">
+                <a href="facebook.com"><i class="fab fa-facebook"><p>Facebook</p></i></a>
+                <a href="twitter.com"><i class="fab fa-twitter-square"><p>Twitter</p></i></a>
+            </div>
+        </div>
+        <div class="img"></div>
+    </footer>
 </body>
 </html>
