--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <title>Le Bistro du Coin</title>
 </head>
 <body>
-    
     <div class="container-fluid">
         <header class="jumbotron">
+            <div id='Bonjour'></div>
             <div class="containImg">
                 <h1 class="display-4">
                     Le Bistro du coin.
