--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
     <main class="container-fluid mainHome">
         <section class="petitMotPerso">
-            <p id="accueil">Bonjour <span id="utilisateur">Utilisateur</span> et bienvenu sur le site des <i>Bistros du coin</i>.</p>
+            <p id="accueil">Bonjour <span id="utilisateur">Utilisateur</span> et bienvenue sur le site des <i>Bistros du coin</i>.</p>
         </section>
 
         <section class="row events">
